--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,8 @@ body{
     background-color: black;
     color: rgb(213, 250, 6);
     font-size: 100px;
-    
+    text-shadow: 0px 0px 15px  rgb(213, 250, 6);
+    box-shadow: 0px 0px 40px  rgb(213, 250, 6);
     grid-column-start: 2;
     grid-column-end: 2;
     text-align: center;
@@ -15,6 +16,7 @@ body{
     padding-right: 3px;
     margin-left: 3px;
     margin-right: 3px;
+    margin-bottom: 10px;
     border-radius: 20px;
 }
 
