--- a/estilos.css
+++ b/estilos.css
@@ -4,10 +4,10 @@ body{
 
 .visualNumeros{
     font-family: 'Stick No Bills', sans-serif;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: rgb(213, 250, 6);
     font-size: 100px;
-    text-shadow: 0px 0px 15px  rgb(213, 250, 6);
+    text-shadow: 0px 0px 10px  rgb(213, 250, 6);
     box-shadow: 0px 0px 40px  rgb(213, 250, 6);
     grid-column-start: 2;
     grid-column-end: 2;
@@ -27,19 +27,23 @@ button{
     padding: 5px;
     margin: 3px;
     font-family: 'Righteous', cursive;
+    border-width: 5px;
+    border-color: rgb(213, 250, 6);
 }
 
 
 input{
     width: 50px ;
-    border-radius: 5px;
-    border-color: rgb(213, 250, 6);
+    border-width: 3px;
+    border-color: rgb(71, 71, 70);
     text-align: center;
     margin-bottom: 30px;
     margin-top: 30px;
     padding: 6px;
     font-size: 20px;
     font-weight:bold;
+    color:rgb(213, 250, 6);
+    background-color: rgb(22, 22, 22);
 
 }
 
